fix nav stacking on mobile

--- a/erc.css
+++ b/erc.css
@@ -68,3 +68,8 @@ body {
 .form-check-input{
     border-color: darkgray;
 }
+@media (min-width: 300px){
+    .flex-sm-row {
+        flex-direction: row !important;
+    }
+}
